--- a/tests/test_data/small_test/conf/pyrate2.conf
+++ b/tests/test_data/small_test/conf/pyrate2.conf
@@ -1,22 +1,22 @@
 #------------------------------------
 # input/output parameters
 # Directory for the (unwrapped) interferograms.
-obsdir:       /absolute/path/to/PyRate/tests/test_data/small_test/roipac_obs/
+obsdir:       /PyRate/tests/test_data/small_test/roipac_obs/
 
 # File containing the list of (raw) interferograms.
-ifgfilelist:  /absolute/path/to/PyRate/tests/test_data/small_test/roipac_obs/ifms_17
+ifgfilelist:  /PyRate/tests/test_data/small_test/roipac_obs/ifms_17
 
 # The DEM used by the processing software
-demfile:      /absolute/path/to/PyRate/tests/test_data/small_test/dem/roipac_test_trimmed.dem
+demfile:      /PyRate/tests/test_data/small_test/dem/roipac_test_trimmed.dem
 
 # The DEM header file from GAMMA (*.par) or ROI_PAC (*.rsc).
-demHeaderFile: /absolute/path/to/PyRate/tests/test_data/small_test/dem/roipac_test_trimmed.dem.rsc
+demHeaderFile: /PyRate/tests/test_data/small_test/dem/roipac_test_trimmed.dem.rsc
 
 # GAMMA only: The directory containing GAMMA slc.par files for all epochs
 slcFileDir:   tests/test_data/small_test/gamma_obs
 
 # Where to write the outputs
-outdir:       /absolute/path/to/PyRate/out/
+outdir:       /PyRate/out/
 
 # InSAR processing software: ROI_PAC = 0, GAMMA = 1
 processor:    0
