--- a/tests/test_data/small_test/conf/pyrate_gamma_test.conf
+++ b/tests/test_data/small_test/conf/pyrate_gamma_test.conf
@@ -2,19 +2,19 @@
 # input/output parameters
 
 # File containing the list of (raw) interferograms.
-ifgfilelist:  /absolute/path/to/PyRate/tests/test_data/small_test/gamma_obs/ifms_17
+ifgfilelist:  /PyRate/tests/test_data/small_test/gamma_obs/ifms_17
 
 # The DEM used by the processing software
-demfile:      /absolute/path/to/PyRate/tests/test_data/small_test/gamma_obs/20060619_utm.dem
+demfile:      /PyRate/tests/test_data/small_test/gamma_obs/20060619_utm.dem
 
 # The DEM header file from GAMMA (*.par) or ROI_PAC (*.rsc).
-demHeaderFile: /absolute/path/to/PyRate/tests/test_data/small_test/gamma_obs/20060619_utm_dem.par
+demHeaderFile: /PyRate/tests/test_data/small_test/gamma_obs/20060619_utm_dem.par
 
 # GAMMA only: The directory containing GAMMA slc.par files for all epochs
-slcfilelist: /absolute/path/to/PyRate/tests/test_data/small_test/gamma_obs/headers
+slcfilelist: /PyRate/tests/test_data/small_test/gamma_obs/headers
 
 # Where to write the outputs
-outdir:       /absolute/path/to/PyRate/out
+outdir:       /PyRate/out
 
 # InSAR processing software: ROI_PAC = 0, GAMMA = 1
 processor:    1
