--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ glob2==0.7
 joblib==0.13.2
 mpi4py==3.0.2
 networkx==2.3
-numpy==1.17.4
+numpy==1.18.1
 scipy==1.3.0
 numexpr==2.7.0
 ghp-import==0.5.5
@@ -13,12 +13,13 @@ sphinx_rtd_theme==0.4.3
 recommonmark==0.5.0
 matplotlib==3.1.1
 sphinxcontrib-programoutput==0.14
-setuptools==41.0.0
+setuptools>=41.0.0
 twine==3.1.1
-wheel==0.33.4
+wheel==0.34.2
 pytest-cov==2.5.1
 coverage==4.5.3
 codecov==2.0.15
-pytest==5.0.1
+pytest==5.3.5
 GDAL==3.0.2
 pyproj==2.2.1
+requests>=2.20
